--- a/style.css
+++ b/style.css
@@ -8,31 +8,13 @@ html {
 }
 body {
   font-family: "Montserrat", sans-serif;
-  /* background-image: url(./images/); */
-  /* background-color: yellow rgb(255, 255, 255);
-  background-size: cover;
-  background-repeat: no-repeat; */
-  /* background-position:  center; */
-  /* background-size: 1200px; */
-  /* width: 100vw; */
-}
-.container {
-  display: grid;
-  grid-template-areas:
-    "header"
-    "main"
-    "footer";
-  grid-template-rows: repeat (3, 1fr);
-  grid-column: repeat (1, 1fr);
 }
 header {
-  height: 200px;
+  height: 100px;
   font-size: 4em;
   display: flex;
   justify-content: center;
   align-items: center;
-  grid-area: header;
-  /* grid-column: 1 / 3; */
   background-color: rgb(7, 180, 172);
   color: rgb(255, 255, 255);
 }
@@ -44,84 +26,83 @@ a:hover {
   opacity: 0.5;
 }
 main {
-  height: 35vw;
-  grid-area: main;
-  background-color: rgb(255, 255, 255);
+  height: 80vh;
+  background-color: rgb(211, 211, 211);
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.flexitem {
-  height: 600px;
-  width: 300px;
-  margin: 5px 0px 5px 0px;
-}
-a {
-  color: rgb(54, 54, 54);
-  text-decoration: none;
-}
 .left {
-  background-position: center;
+  width: 50%;
+  height: 100%;
+  margin: 12px;
   background-image: url(./images/brain_left.png);
   background-repeat: no-repeat;
   background-size: contain;
+  background-size: 270px;
+  background-position: right;
   position: relative;
   z-index: 0;
+  /*   animation-name: Brainleft;
+  animation-duration: 5s;
+  animation-iteration-count: infinite;
+
+  animation: Brainleft 0.4s ease-in-out 1s 1 normal both; */
 }
-.lefttop {
-  width: 500px;
-  height: 100px;
-  border-radius: 15px;
-  background-color: rgb(255, 255, 255);
-  opacity: 60%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+
+/* @keyframes Brainleft {
+  from {
+  }
+}
+ */
+.leftbtm {
+  width: 179px;
+  height: 60px;
   font-size: 4rem;
-  color: rgb(2, 2, 2);
-  position: relative;
-  right: 364px;
+  color: rgb(32, 32, 32);
+  position: absolute;
+  top: 276px;
+  left: 436px;
   z-index: 1;
 }
 .right {
-  background-position: center;
+  margin: 12px;
+  width: 50%;
+  height: 100%;
   background-image: url(./images/brain_right.png);
   background-repeat: no-repeat;
   background-size: contain;
+  background-size: 270px;
+  background-position: left;
   position: relative;
   z-index: 0;
 }
-.righttop {
-  width: 500px;
-  height: 100px;
-  border-radius: 15px;
-  background-color: rgb(255, 255, 255);
-  opacity: 60%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+.rightbtm {
+  width: 200px;
+  height: 60px;
   font-size: 4rem;
-  color: rgb(2, 2, 2);
-  position: relative;
-  right: 364px;
+  color: rgb(32, 32, 32);
+  position: absolute;
+  top: 276px;
+  left: 312px;
   z-index: 1;
 }
-p:hover {
-  opacity: 0.5;
+main div div a {
+  color: rgb(54, 54, 54);
+  text-decoration: none;
 }
 footer {
   height: 70px;
   grid-area: footer;
-  background-color: rgb(223, 223, 223);
-  color: wheat;
+  background-color: rgb(118, 145, 185);
   display: flex;
   align-items: center;
   justify-content: center;
   font-size: 1.6rem;
 }
-footer a {
-  font-size: 1.7rem;
-  color: rgb(22, 22, 22);
+footer p a {
+  font-size: 2rem;
+  color: rgb(238, 238, 238);
   text-decoration: none;
 }
 @media only screen and (max-width: 576px) {
