--- a/style.css
+++ b/style.css
@@ -4,84 +4,101 @@
   box-sizing: border-box;
 }
 html {
+  /*   background-image: url(./images/bg-1.jpg);
+  background-repeat: no-repeat;
+  background-size: contain; */
   font-size: 62%;
-}
-body {
   font-family: "Montserrat", sans-serif;
+  height: 100vw;
 }
 header {
-  height: 150px;
+  /* height: 250px; */
   font-size: 2.5em;
-  /*   display: flex;
-  justify-content: flex-start;
-  align-items: center; */
-  background-color: rgb(29, 29, 29);
-  color: rgb(255, 255, 255);
+  /* background-color: rgb(29, 29, 29); */
+  /* color: rgb(255, 255, 255); */
 }
-.nav {
+.navbar {
+  height: 250px;
+  background-color: rgb(167, 201, 14);
   display: flex;
-  align-items: center;
-  /* flex-direction: row; */
-  justify-content: flex-start;
-}
-.nav-btn {
-  padding-left: 19px;
-  /* margin-left: 8px; */
-  font-weight: 600;
-  letter-spacing: 28px;
-  font-size: 2.5em;
-  border: none;
-  width: 400px;
-  background-color: rgb(29, 29, 29);
-}
-.nav-content {
+  flex-flow: row;
+  justify-content: center;
   width: 100%;
 }
-a {
-  text-decoration: none;
-  color: rgb(241, 241, 241);
-}
-ul {
-  /*   margin-left: 22px; */
-  list-style-type: none;
-}
-
 .list-item {
+  font-weight: 600;
+  color: #353535;
+  padding: 17px;
   text-decoration: none;
-  height: 37px;
-  display: flex;
-  align-items: center;
+  list-style: none;
+  background-color: rgb(167, 201, 14);
+}
+.subnav-btn {
+  font-family: "Righteous", cursive;
+  font-size: 2em;
+  color: #494949;
+  background-color: rgb(167, 201, 14);
+  width: 100%;
+  cursor: pointer;
+  border: none;
+}
+.subnav-content {
+  display: none;
+  position: absolute;
+  left: 0;
+  top: 98px;
+  width: 100%;
+}
+.left button a,
+.right button a {
+  text-decoration: none;
+  color: rgb(36, 36, 36);
+}
+.subnav-btn a,
+.subnav-content a {
+  color: #2c2c2c;
+  text-decoration: none;
+  letter-spacing: 10px;
 }
 main {
-  height: 80vw;
+  background-image: url(./images/bg-4.jpg);
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+  height: 55vw;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+.left-webdev {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  margin-left: 12px;
 }
 .left,
 .right {
   display: flex;
   align-items: center;
   margin: 12px;
-  width: 50%;
-  height: 90%;
+  width: 24%;
+  height: auto;
   background-repeat: no-repeat;
   background-size: contain;
+  margin-top: 20px;
 }
 .nav-design-button,
 .nav-web-dev-button {
-  width: 279px;
-  height: 60px;
+  width: 100%;
+  height: 92px;
   font-size: 1.6rem;
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #000000;
-  width: 100%;
-  height: 10%;
+  background-color: #e7e7e7;
   border-radius: 3px;
-  letter-spacing: 18px;
-  box-shadow: 0 0 125px 0px rgb(61, 61, 61);
+  letter-spacing: 13px;
+  /* box-shadow: 0 0 227px 0px rgb(61, 61, 61); */
   font-weight: 600;
   border: none;
 }
@@ -93,27 +110,85 @@ main {
   background-image: url(./images/brain_right.png);
   background-position: left;
 }
+.accordion {
+  width: 70%;
+  margin-left: 30px;
+  height: auto;
+}
+form {
+  font-size: 2rem;
+  width: 40%;
+  padding: 18px;
+  display: inline-block;
+  padding: 9px;
+  margin: 8px;
+}
+legend {
+  font-size: 2.3rem;
+  padding: 1.5rem;
+  text-align: center;
+}
+label {
+  font-size: 1.5rem;
+  margin-left: 6px;
+  display: block;
+}
+input {
+  /* margin: 8px; */
+  padding: 8px;
+  width: 600px;
+  margin: 9px;
+}
+textarea {
+  max-width: 600px;
+  width: 600px;
+  margin: 9px;
+}
+.submit button {
+  margin: 9px;
+  border: none;
+  background-color: rgb(167, 201, 14);
+  width: 150px;
+  height: 30px;
+  /* margin-left: 300px; */
+  position: absolute;
+}
 
-/* HOVER */
+/* ON HOVER */
 
 a:hover {
   opacity: 0.5;
 }
-.nav-btn:hover {
-  background-color: #c22d00;
-  height: 150px;
+.subnav-btn:hover {
   transition: all 1s ease;
 }
-.nav-btn:hover .nav-content {
-  display: block;
-  transition: all 1s ease;
+.list-item:hover a {
+  color: rgb(236, 236, 236);
 }
 .list-item:hover {
-  background-color: #c22d00;
-  height: 37px;
+  color: rgb(31, 31, 31);
+  background-color: #161616;
+  border-radius: 10px;
+  transition: all 1.5s ease;
+}
+.subnav:hover .subnav-content {
+  color: rgb(236, 236, 236);
   display: flex;
+  flex-direction: row;
   align-items: center;
-  transition: all 1s ease;
+  justify-content: center;
+  transition: all 5s ease;
+}
+.nav-design-button:hover {
+  background-color: #161616;
+  border-radius: 10px;
+  transition: all 1.5s ease;
+}
+.nav-web-dev-button:hover {
+  color: rgb(236, 236, 236);
+  background-color: #161616;
+  border-radius: 10px;
+  transition: all 1.5s ease;
 }
 .left:hover {
   -webkit-animation: rotate-center 0.6s ease-in-out reverse both;
@@ -166,15 +241,41 @@ a:hover {
 
 /* MEDIA QUERIES */
 
-@media only screen and (max-width: 576px) {
-  main {
-    display: none;
+@media only screen and (max-width: 992px) {
+  .left,
+  .right {
+    background-image: none;
+    margin-top: 20px;
+    width: 100%;
   }
-  header {
-    height: 150vw;
+  .left:hover {
+    animation-play-state: paused;
+    -webkit-animation-play-state: paused;
+  }
+  .right:hover {
+    animation-play-state: paused;
+    -webkit-animation-play-state: paused;
+  }
+  main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 30px;
+    margin-top: 30px;
+    background-image: none;
+    margin-top: 120px;
+    width: 100%;
+    height: 50px;
   }
   nav {
     display: flex;
     flex-direction: column;
+  }
+}
+@media only screen and (min-width: 992px) {
+  .left,
+  .right {
+    height: 100%;
   }
 }
