--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,74 +1,83 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
+@import "variables";
+@import "reset";
+@import "mixins";
+
 html {
-  /*   background-image: url(./images/bg-1.jpg);
-  background-repeat: no-repeat;
-  background-size: contain; */
+  font-size: 62%;
   font-size: 62%;
   font-family: "Montserrat", sans-serif;
   height: 100vw;
 }
 header {
-  /* height: 250px; */
-  font-size: 2.5em;
-  /* background-color: rgb(29, 29, 29); */
-  /* color: rgb(255, 255, 255); */
+  font-size: 2em;
 }
-.navbar {
-  height: 250px;
-  background-color: rgb(167, 201, 14);
+.topbar {
+  height: 180px;
+  background-color: $green-color;
   display: flex;
   flex-flow: row;
   justify-content: center;
   width: 100%;
 }
 .list-item {
+  font-size: 2rem;
   font-weight: 600;
   color: #353535;
   padding: 17px;
   text-decoration: none;
   list-style: none;
-  background-color: rgb(167, 201, 14);
 }
-.subnav-btn {
+.majka-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-flow: row;
+  margin-top: 20px;
+  width: 200px;
   font-family: "Righteous", cursive;
   font-size: 2em;
-  color: #494949;
-  background-color: rgb(167, 201, 14);
-  width: 100%;
+  color: $grey-color;
+  background-color: $green-color;
   cursor: pointer;
   border: none;
 }
+.majka-btn a {
+  margin: 0 12px;
+}
+p {
+  letter-spacing: 9px;
+}
 .subnav-content {
-  display: none;
+  @include flex-center();
+  @include button();
   position: absolute;
   left: 0;
-  top: 98px;
-  width: 100%;
+  top: 90px;
+}
+.about-me {
+  color: $white-color;
+  @include button();
 }
 .left button a,
 .right button a {
   text-decoration: none;
-  color: rgb(36, 36, 36);
+  color: $grey-color;
 }
-.subnav-btn a,
-.subnav-content a {
-  color: #2c2c2c;
+.majka-btn a,
+.subnav-content a,
+.nav-design-button a,
+.nav-web-dev-button a {
+  color: $grey-color;
   text-decoration: none;
-  letter-spacing: 10px;
+  letter-spacing: 9px;
 }
 main {
-  background-image: url(./images/bg-4.jpg);
-  background-repeat: no-repeat;
-  background-size: contain;
+  position: relative;
+  background-image: url(../images/bg-4.jpg);
+  @include bg();
   background-position: center;
   height: 55vw;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  @include flex-center();
 }
 .left-webdev {
   display: flex;
@@ -80,34 +89,29 @@ main {
 .right {
   display: flex;
   align-items: center;
-  margin: 12px;
+  margin: 5px;
   width: 24%;
-  height: auto;
-  background-repeat: no-repeat;
-  background-size: contain;
+  height: 100%;
+  @include bg();
   margin-top: 20px;
 }
 .nav-design-button,
 .nav-web-dev-button {
-  width: 100%;
-  height: 92px;
-  font-size: 1.6rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: #e7e7e7;
-  border-radius: 3px;
+  @include button();
+  font-size: 2rem;
+  @include flex-center();
+  background-color: $white-color;
   letter-spacing: 13px;
-  /* box-shadow: 0 0 227px 0px rgb(61, 61, 61); */
   font-weight: 600;
   border: none;
 }
+
 .left {
-  background-image: url(./images/brain_left.png);
+  background-image: url(../images/brain_left.png);
   background-position: right;
 }
 .right {
-  background-image: url(./images/brain_right.png);
+  background-image: url(../images/brain_right.png);
   background-position: left;
 }
 .accordion {
@@ -115,85 +119,137 @@ main {
   margin-left: 30px;
   height: auto;
 }
+
+//CONTACT
+
+.contact-main {
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+}
+.contact-left {
+  background-image: url(../images/brain_left.png);
+  /* background-position: right; */
+  /* width: 20%; */
+}
+.contact-right {
+  background-image: url(../images/brain_right.png);
+  /* background-position: left; */
+  /* width: 20%; */
+}
+section {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+.button-1 {
+  width: 50%;
+}
+.button-2 {
+  width: 50%;
+}
 form {
+  position: relative;
+  top: 40px;
+  @include flex-center();
   font-size: 2rem;
-  width: 40%;
-  padding: 18px;
-  display: inline-block;
-  padding: 9px;
-  margin: 8px;
+  width: 50%;
 }
 legend {
-  font-size: 2.3rem;
-  padding: 1.5rem;
+  font-size: 2rem;
   text-align: center;
+  font-style: italic;
+}
+fieldset {
+  padding: 22px;
+  border: 1px solid rgb(161, 161, 161);
 }
 label {
+  margin-top: 18px;
   font-size: 1.5rem;
-  margin-left: 6px;
+  margin-left: 16px;
   display: block;
 }
 input {
-  /* margin: 8px; */
   padding: 8px;
-  width: 600px;
-  margin: 9px;
+  width: 95%;
+  margin: 0 9px;
+}
+::placeholder {
+  font-style: italic;
+  font-size: medium;
 }
 textarea {
   max-width: 600px;
-  width: 600px;
+  width: 95%;
   margin: 9px;
 }
-.submit button {
-  margin: 9px;
+.submit {
+  border-radius: 3px;
   border: none;
-  background-color: rgb(167, 201, 14);
-  width: 150px;
-  height: 30px;
-  /* margin-left: 300px; */
-  position: absolute;
+  background-color: $green-color;
+  width: 95%;
+  height: 50px;
 }
+
+//ACTIVE
+
+.here a {
+  color: white;
+}
+
+//FOCUS
+
+/* .here:focus {
+  border: 2px solid #ffffff;
+  outline: 2px solid #000000;
+} */
 
 /* ON HOVER */
 
+.majka-btn:hover a {
+  transition: all 0.5s ease;
+}
+.majka-btn:hover .i {
+  color: #f14038;
+}
 a:hover {
   opacity: 0.5;
 }
-.subnav-btn:hover {
-  transition: all 1s ease;
-}
-.list-item:hover a {
-  color: rgb(236, 236, 236);
+.majka-btn a {
+  opacity: 100;
 }
 .list-item:hover {
-  color: rgb(31, 31, 31);
-  background-color: #161616;
-  border-radius: 10px;
-  transition: all 1.5s ease;
+  background-color: $grey-color;
+  border-radius: 3px;
+  transition: all 1s ease;
 }
-.subnav:hover .subnav-content {
-  color: rgb(236, 236, 236);
-  display: flex;
+.topbar:hover .subnav-content {
+  color: $white-color;
+  @include flex-center();
   flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  transition: all 5s ease;
 }
 .nav-design-button:hover {
-  background-color: #161616;
-  border-radius: 10px;
-  transition: all 1.5s ease;
+  background-color: $grey-color;
+  border-radius: 3px;
+  transition: all 1s ease;
 }
 .nav-web-dev-button:hover {
-  color: rgb(236, 236, 236);
-  background-color: #161616;
-  border-radius: 10px;
-  transition: all 1.5s ease;
+  background-color: $grey-color;
+  border-radius: 3px;
+  transition: all 1s ease;
+}
+.list-item:hover a,
+.nav-web-dev-button:hover a,
+.nav-design-button:hover a {
+  border-radius: 3px;
+  color: $white-color;
 }
 .left:hover {
   -webkit-animation: rotate-center 0.6s ease-in-out reverse both;
-  animation: rotate-center 0.6s ease-in-out reverse both;
+  animation: rotate-center 1s ease-in-out reverse both;
 }
+
 @-webkit-keyframes rotate-center {
   0% {
     -webkit-transform: rotate(0);
@@ -216,7 +272,7 @@ a:hover {
 }
 .right:hover {
   -webkit-animation: rotate-center 0.6s ease-in-out both;
-  animation: rotate-center 0.6s ease-in-out both;
+  animation: rotate-center 1s ease-in-out both;
 }
 @-webkit-keyframes rotate-center {
   0% {
@@ -241,7 +297,7 @@ a:hover {
 
 /* MEDIA QUERIES */
 
-@media only screen and (max-width: 992px) {
+@media only screen and (max-width: 768px) {
   .left,
   .right {
     background-image: none;
@@ -257,10 +313,8 @@ a:hover {
     -webkit-animation-play-state: paused;
   }
   main {
-    display: flex;
+    @include flex-center();
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
     margin-top: 30px;
     margin-top: 30px;
     background-image: none;
